# langchain-chat

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  README.md  config.yaml  full_self_test.py  pyproject.toml  requirements.txt
_self_test_exports/: session_4c24afeb-331e-4a32-801c-4e0d20470c4d.md  session_57fbde4a-88b4-46d4-b2dd-d0b7bec9d61b.md  session_5d109745-de77-4dfd-9c30-c6772772060b.md  session_8341af4b-64a1-42dd-9725-d29a56265475.md  session_f6f13f51-b838-45be-a7cc-28ff46eaab5f.md  session_f8de3c4a-9509-45a9-89ff-fd0f746731ed.md
config/: config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  logging.yaml  presets.yaml
docs/: architecture.md
scripts/: full_self_test.py  init_db.py
src/: __init__.py  chat_engine.py  config.py  config_manager.py  main.py  models.py  preset_manager.py  session_manager.py  storage.py  tui_app.py  ui_protocol.py  user_manager.py
src/core/: __init__.py  chat_engine.py  config_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py
src/ui/tui/: __init__.py
src/ui/web/: __init__.py
tests/: test_chat_engine.py  test_config_manager.py  test_models.py  test_preset_manager.py  test_session_manager.py  test_storage.py  test_tui_app.py  test_ui_protocol_and_tui.py  test_user_manager.py
