[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "langchain-chat"
version = "0.1.0"
description = "LangChain chat application scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.2",
  "aiosqlite>=0.21.0",
  "aiomysql>=0.2.0",
  "langchain>=1.3.11",
  "langchain-core>=1.4.8",
  "langchain-openai>=1.3.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.1",
  "prompt_toolkit>=3.0.47",
  "python-dotenv>=1.0.1",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
